# caching_dex

./: CMakeLists.txt  README.md
include/: GlobalAddress.h  Stats.h  TreeAPI.h  Types.h
include/cache/: Btree.h  BtreeNode.h  LeanStoreCache.h  NodeWR.h
include/memory/: Backend.h  InMemoryBackend.h
include/tree/: HashTable.h  LeanStoreTree.h  PageTable.h
test/: newbench.cpp  uniform_generator.h
util/: CacheAllocator.h
